<resources>
    <string name="app_name">Task 1</string>
    <string name="field_name">Name</string>
    <string name="field_second_name">Second Name</string>
    <string name="click_button_date">click to select date born</string>
    <string name="go_to_new_activity">Next</string>
    <string name="age">Age</string>
    <string name="error_field_age">Error wrong date born</string>
    <string name="error_field_name">Error field "Name" empty</string>
    <string name="error_field_secondname">Error field "SecondName" empty</string>
    <string formatted="false" name="format_date">%d-%d-%d</string>
</resources>
