<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/field_name"
        android:ems="10"
        android:id="@+id/Name"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/field_second_name"
        android:ems="10"
        android:id="@+id/Famil"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/Name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_marginBottom="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dataBorn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Famil"
        android:clickable="true"
        android:onClick="onclick"
        android:text="@string/click_button_date"
        android:textSize="16sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_new_activity"
        android:id="@+id/buttonNextActivity"
        android:layout_below="@+id/dataBorn"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
