<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_name"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textColor="@color/field_grey21"
        android:layout_marginTop="@dimen/margin50"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/NameS"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin30"
        android:textSize="@dimen/sizeText24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_second_name"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="@color/field_grey21"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/SecondName"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin30"
        android:textSize="@dimen/sizeText24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="@color/field_grey21"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/Date"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sizeText24"
        />

</LinearLayout>